Add zinc server startup from zinc client